add cancel button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="manifest" href="img/site.webmanifest">
 
-    <title>Bay - Commit and Challenge</title>
+    <title>Project Bay - Commit and Challenge</title>
   </head>
   <body>
     <div id="root"></div>
